# g_ball_robot

./: README.md
g_ball_bringup/: CMakeLists.txt  package.xml
g_ball_bringup/config/lwa4p/: arm_gripper_controller.yaml  arm_gripper_driver.yaml  joint_limits.yaml
g_ball_bringup/launch/: g_ball_complete.launch  lwa4p.launch  robotnik_modbus_io.launch
g_ball_pad/: CMakeLists.txt  package.xml
g_ball_pad/launch/: g_ball_pad.launch  ps3.yaml
g_ball_pad/src/: g_ball_pad.cpp
